# wordgen

./: README.md  wordgen.cabal  wordgen.hs
data/cities/: germancities.txt  japancities.txt
data/en/: ABOUT
data/klingon/: klingon.txt
data/ru/: ABOUT  ru-LICENSE.txt  ruwords.txt
