name:                wordgen
version:             0.0
synopsis:            Random word generator based on Markov chains
author:              Yakov Shklarov
maintainer:          yshklarov@gmail.com
license:             PublicDomain
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.8

executable wordgen
  build-depends:     random, base ==4.*
  main-is:           wordgen.hs
